src/components/BuildingCard.scss
@import "./_constants";

.producer-card-container {
  display: flex;
  height: $cardHeight;
}

.producer-card {
  width: 592px;
  height: $cardHeight;
  //border: 1px black solid;
  display: flex;
  box-sizing: border-box;
  user-select: none;
  justify-content: flex-end;
  filter: drop-shadow(2px 4px 6px black);
  margin-right: 4px;
  margin-left: 4px;
  .icon {
  }

  .drag-area {
    user-select: none;
    cursor: grab;
    line-height: 90px;
    border-right: 1px darkgrey solid;
    display: flex;
    flex-direction: column;
    background: lightgrey;
    border-radius: 4px;
    position: relative;
    top: -10px;
  }
  .main-area {
    width: 505px;
    background: lightgrey;
    height: 100px;
  }

  .top-area {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    border-top: 1px solid black;
    background: lightgrey;
    position: relative;
    margin-top: -33px;
    width: 350px;
    border-radius: 6px 6px 0 0;

    .count-area {
      margin-top: 4px;
    }
  }

  .bottom-area {
    display: flex;
    //border: 1px solid black;
  }

  .title {
    color: black;
    //border: 1px solid black;
    font-size: 20px;
    line-height: 32px;
    min-width: 150px;
    padding-left: 18px;
    margin-right: auto;
    display: inline-block;
    flex-basis: 100%;
    overflow: hidden;
    .edit-icon {
      visibility: hidden;
    }
    &:hover .edit-icon {
      visibility: visible;
      margin-left: 6px;
    }
    .title-text {
      display: inline-block;
      max-width: 300px;
      text-overflow: ellipsis;
      white-space: nowrap;
      overflow-x: none;
    }
  }

  .top-area .icon {
    margin-bottom: -36px;
    transform: scale(0.5) translateY(-30%);
  }

  .recipe-display {
    display: flex;
    width: 100%;
    justify-content: flex-end;
    margin-right: 10px;
    //line-height: 32px;

    .equals-sign {
      margin: auto 0;
      margin-right: 12px;
      padding: 0 8px;
      font-size: 32px;
    }

    .icon.landfill {
      margin-right: -40px;
      transform: scale(0.7);
      opacity: 80%;
    }
  }

  .spacer {
    width: 5px;
    flex-shrink: 0;
  }

  .output-area {
    width: 70px;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    font-size: 16px;
    border-top: 1px solid black;
    background: lightgrey;
    border-radius: 4px;
    box-sizing: border-box;
    //height: 86px;
    .output-arrow {
      box-sizing: border-box;
      border: 2px darkgrey outset;
      text-align: center;
      line-height: 20px;
      height: 22px;
    }
    .output-arrow.right {
      line-height: 38px;
      height: 38px;
    }
  }
}

.building-card-button {
  font-size: 18px;
  line-height: 22px;
  min-width: 150px;
  margin: 10px 0 0 50px;
  padding: 6px;
  text-align: center;
  &.disabled {
    pointer-events: none;
    opacity: 0.4;
  }
}

.choose-research {
  font-size: 18px;
  line-height: 20px;
  width: 100px;
  margin: auto 0;
  padding: 6px;
}

.count-area {
  display: flex;
  user-select: none;
  align-items: center;

  .plus-minus {
    padding: 0px 6px;
    margin: 0 10px;
    border: 1px outset darkgrey;
    font-size: 16px;
    line-height: 32px;
  }
  .count {
    font-size: 16px;
    line-height: 32px;
  }
}

.kind-Empty {
  .mainArea {
    opacity: 0.8;
  }
}

.main-area.empty-lane .bottom-area .building-card-button {
  margin: 25px 50px 0;
}

.main-bus-segment {
  background-color: #55626e;
}

